--- a/Week 1 - Introduction.ipynb
+++ b/Week 1 - Introduction.ipynb
@@ -136,15 +136,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "60f2a0df-36f8-46b9-b107-4bf03b719115",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Our planet is called Earth\n",
+      "Our planet's average surface temperature is 15.0 $^o$C\n"
+     ]
+    }
+   ],
    "source": [
-    "Name = \n",
+    "Name = \"Earth\"\n",
     "print(f\"Our planet is called {Name}\")\n",
     "\n",
-    "SurfaceT =  # degrees C\n",
+    "SurfaceT = 15 # degrees C\n",
     "print(f\"Our planet's average surface temperature is {SurfaceT:.1f} $^o$C\")\n"
    ]
   },
@@ -164,17 +173,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "4bc34505-05df-4d7a-8030-856cface1828",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The volume of the Moon is 2.023465348709695% the volume of the Earth\n"
+     ]
+    }
+   ],
    "source": [
-    "Moon =  # True/False\n",
+    "Moon = True\n",
     "r_Earth = 6378 # km\n",
+    "r_Moon = 1738 # km\n",
     "if Moon is True:\n",
-    "    ## write your code in here. Make sure its indented correctly\n",
+    "    v_Earth = (6378**3)*(4/3)*3.14\n",
+    "    v_Moon = (1738**3)*(4/3)*3.14\n",
+    "    v_ratio = (v_Moon/v_Earth)\n",
+    "    print(f\"The volume of the Moon is {v_ratio*100}% the volume of the Earth\")\n",
     "else:\n",
-    "    ## write a print statement for Moon is False.\n",
+    "    print(\"The Earth does not have a Moon\")\n",
     "    "
    ]
   },
@@ -192,15 +213,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "29a0d294-d3f6-47c5-b664-c3140664535e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mercury is the 1st planet from the sun.\n",
+      "Venus is the 2nd planet from the sun.\n",
+      "Earth is the 3rd planet from the sun.\n",
+      "Mars is the 4th planet from the sun.\n",
+      "Jupiter is the 5th planet from the sun.\n",
+      "Saturn is the 6th planet from the sun.\n",
+      "Uranus is the 7th planet from the sun.\n",
+      "Neptune is the 8th planet from the sun.\n"
+     ]
+    }
+   ],
    "source": [
-    "Planets = # create a list\n",
+    "Planets = [\"Mercury\", \"Venus\", \"Earth\", \"Mars\", \"Jupiter\", \"Saturn\", \"Uranus\", \"Neptune\"]\n",
     "\n",
     "# Write your for loop\n",
-    "        "
+    "\n",
+    "for idx, planet in enumerate(Planets):\n",
+    "    index=idx+1 \n",
+    "    if(index==1):\n",
+    "        print(f\"{planet} is the {index}st planet from the sun.\")\n",
+    "    elif(index==2): \n",
+    "        print(f\"{planet} is the {index}nd planet from the sun.\")\n",
+    "    elif(index==3): \n",
+    "        print(f\"{planet} is the {index}rd planet from the sun.\")\n",
+    "    else:\n",
+    "        print(f\"{planet} is the {index}th planet from the sun.\")\n"
    ]
   },
   {
@@ -215,19 +261,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "a2c80ac7-3af3-481a-aec7-5411401129ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Planet_radii = {'Mercury': ...,\n",
-    "                'Venus': ...,\n",
-    "                'Earth': ...,\n",
-    "                'Mars': ...,\n",
-    "                'Jupiter': ...,\n",
-    "                'Saturn': ...,\n",
-    "                'Uranus': ...,\n",
-    "                'Nepture': ...}"
+    "Planet_radii = {'Mercury': 2440,\n",
+    "                'Venus': 6052,\n",
+    "                'Earth': 6378,\n",
+    "                'Mars': 3390,\n",
+    "                'Jupiter': 69911,\n",
+    "                'Saturn': 54364,\n",
+    "                'Uranus': 15759,\n",
+    "                'Neptune': 24622}"
    ]
   },
   {
@@ -242,17 +288,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "91319645-0b90-44dc-9188-64e3177b936e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Planet Mercury has a volume that is 5.599070479385001% the volume of Earth's\n",
+      "Planet Venus has a volume that is 85.43645369765676% the volume of Earth's\n",
+      "Planet Mars has a volume that is 15.015698858902002% the volume of Earth's\n",
+      "Planet Jupiter has a volume that is 131699.15792260223% the volume of Earth's\n",
+      "Planet Saturn has a volume that is 61927.08914609533% the volume of Earth's\n",
+      "Planet Uranus has a volume that is 1508.4552186476078% the volume of Earth's\n",
+      "Planet Neptune has a volume that is 5753.292260038912% the volume of Earth's\n"
+     ]
+    }
+   ],
    "source": [
     "def volume_percent(r_Earth, r_planet):\n",
     "    ## write your function in here\n",
+    "    v_Earth = (r_Earth**3)*(4/3)*3.14\n",
+    "    v_planet = (r_planet**3)*(4/3)*3.14\n",
+    "    \n",
+    "    volume_perc = (v_planet/v_Earth)*100\n",
     "\n",
     "    return volume_perc\n",
     "\n",
-    "# Create a for loop that calls your function and prints the volume of each planet (relative to Earth)"
+    "# Create a for loop that calls your function and prints the volume of each planet (relative to Earth)\n",
+    "\n",
+    "for planet in Planets:\n",
+    "    if (planet != \"Earth\"):   \n",
+    "        print(f\"Planet {planet} has a volume that is {volume_percent(Planet_radii[\"Earth\"], Planet_radii[planet])}% the volume of Earth's\")"
    ]
   },
   {
@@ -283,8 +351,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "08fce101-1b8e-4706-a3b2-e0612edef7e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on some very rough estimations, Earth's sea level would rise by 63.21285931611525 meters if Antarctica melted instantly. Sitting at an elevation of 96 meters, McCone Hall would not get submerged.\n"
+     ]
+    }
+   ],
+   "source": [
+    "antarctica_radius = 2000*1000 #m\n",
+    "antarctica_surface_area = (antarctica_radius**2)*3.14\n",
+    "ice_thickness = 2*1000 #m\n",
+    "ice_volume = antarctica_surface_area*ice_thickness\n",
+    "ice_density = 0.9\n",
+    "antarctica_water_volume = ice_volume*ice_density #m\n",
+    "\n",
+    "earth_surface_area = 4*3.14*((r_Earth*1000)**2) #m\n",
+    "ocean_surface_area = earth_surface_area*0.7\n",
+    "\n",
+    "estimated_sea_level_rise = antarctica_water_volume/ocean_surface_area\n",
+    "\n",
+    "mccone_hall_elevation = 96 #m\n",
+    "\n",
+    "print(f\"Based on some very rough estimations, Earth's sea level would rise by {estimated_sea_level_rise} meters if Antarctica melted instantly. Sitting at an elevation of {mccone_hall_elevation} meters, McCone Hall would not get submerged.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df4d0cf8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -292,7 +392,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "EPS88",
    "language": "python",
    "name": "python3"
   },
@@ -306,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
